[package]
name = "stark-ark"
version = "0.1.0"
edition = "2021"

[dependencies]
# 读取env文件
dotenv = "0.15"
# 数据序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 加密与安全
aes-gcm = "0.10"
argon2 = "0.5"
hex = "0.4"
# 错误处理与工具
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
# Starknet 
starknet ="0.17.0"
rand="0.8"
tokio = { version = "1.0", features = ["full"] }
url = "2.5"

# ✅ 新增：命令行参数解析
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.0"
