[package]
name = "stark-ark"
version = "0.1.7"
edition = "2021"
description = "A secure, Rust-based CLI wallet and library for Starknet."
license = "MIT"
repository = "https://github.com/0xcrypto2024/stark-ark"
exclude = [
    ".env",
    ".env.sample",
    "keystore.json",
]

[dependencies]
# 读取env文件
dotenv = "0.15"
# 数据序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 加密与安全
aes-gcm = "0.10"
argon2 = "0.5"
hex = "0.4"
# 错误处理与工具
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
# Starknet 
starknet ="0.17.0"
rand="0.8.5"
generic-array = "0.14.7"
tokio = { version = "1.0", features = ["full"] }
url = "2.5"

# ✅ 新增：命令行参数解析
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.0"
directories = "6.0.0"
